refactor(server): update openapi spec
