# server/pkg/api_components.go
@@ -1,7 +1,7 @@
 /*
  * robolaunch Industry Cloud Platform - OpenAPI 3.0
  *
- * API for robolaunch ICP platform structure.
+ * API for robolaunch ICP platform structure. 
  *
  * API version: 1.0.11
  * Contact: info@robolaunch.io
